--- a/index.css
+++ b/index.css
@@ -18,10 +18,10 @@ body {
 }
 
 #tooltip div {
-    margin: 0;
+    /* margin: 0; */
     font-family: sans-serif;
-    font-size: 12px;
-    color: white;
+    /* font-size: 12px; */
+    /* color: white; */
 }
 
 #tooltip p {
